[package]
name = "headless-2025-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.10.1", features = ["cookie"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }