[package]
name = "headless-pg"
version = "0.1.0"
authors = ["naka"]
edition = "2024"

#tower = "0.4"
#tower-http = { version = "0.4", features = ["cors"] }

[dependencies]
axum = "0.7"
chrono = "0.4"
dotenvy = "0.15"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.18.1"
